Fix styling for secrets in dark mode

--- a/scss/partials/_characters.scss
+++ b/scss/partials/_characters.scss
@@ -58,5 +58,5 @@
 }
 
 .dark-mode .secret-legend {
-  border: 1px solid rgba(255, 255, 255, 0.05);
+  background: rgba(255, 255, 255, 0.1);
 }
